--- a/client/css/index.css
+++ b/client/css/index.css
@@ -5,7 +5,18 @@
 
 #ses-id-main p {
   margin: 10px;
+  padding: 10px;
   background: black;
   border-radius: 5px;
   color: green;
+}
+#ses-id-main a {
+  color: green;
+}
+
+#ses-id-main li {
+  color: green;
+  margin: 10px;
+  padding: 10px;
+  font-size: 18px;
 }
