--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -1,9 +1,13 @@
 <div id="ses-id-main" 
-  <h2>ses-id-main</h2>
+  <h2>TODO: title in templates/partials/main.hbs</h2>
 
   <p>This content is loaded from ./templates/partials/main.hbs via ./templates/index.hbs</p>
   <p>Edit all partials in ./templates/partials to not only change this content, but also scripts that are loaded.</p>
   <p>Most importantly you should change all 'id' names like 'ses-id-main' to match the name of your feature</p>
   <p>Do the same for all files and routes that contain the 'id' placeholder. Rename and edit them to match your feature name.</p>
 
+  <ul>
+    <li><a href="/routes">Pages Routes</a></li>
+    <li><a href="https://github.com/thlorenz/ses-barebones/blob/master/README.md">Readme</a></li>
+  </ul>
 </div>
