--- a/templates/cntslideshows.hbs
+++ b/templates/cntslideshows.hbs
@@ -2,11 +2,11 @@
 <html>
 <head>
   {{> ses-core-head }}
-  {{> ses-id-head }}
+  {{> ses-cntslideshows-head }}
 </head>
 <body>
   {{> ses-core-header }}
-  {{> ses-id-main }}
+  {{> ses-cntslideshows-main }}
 
   {{> ses-core-scripts-body-js }}
 </body>
