--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -1,4 +1,4 @@
-<div id="ses-id-main" 
+<div id="ses-cntslideshows-main" 
   <h2>TODO: title in templates/partials/main.hbs</h2>
 
   <p>This content is loaded from ./templates/partials/main.hbs via ./templates/index.hbs</p>
