--- a/templates/partials/scripts-head-css.hbs
+++ b/templates/partials/scripts-head-css.hbs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="/ses-id-css/index.css">
+<link rel="stylesheet" type="text/css" href="/ses-cntslideshows-css/index.css">
