--- a/templates/cntslideshows-index.hbs
+++ b/templates/cntslideshows-index.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   {{> ses-core-head }}
@@ -7,7 +7,6 @@
 <body>
   {{> ses-core-header }}
   {{> ses-cntslideshows-main }}
-
   {{> ses-core-scripts-body-js }}
 </body>
 </html>
